--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.poetry]
 name = "etalon"
-version = "0.5.0"
+version = "0.6.0"
 description = ""
 authors = ["Zach Mitchell <zmitchell@fastmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-click = "^7.1.2"
+click = "^8.0.0"
 scipy = "^1.5.4"
-numpy = "1.19.3"
+numpy = "^1.19.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
